# FragBEST-Myo

./: .gitignore  .readthedocs.yaml  ChangeLog.md  LICENSE  README.md  THIRD_PARTY_NOTICE.md  build.sh  main.py  pyproject.toml
LICENSES/: 1-MaSIF-License-Apache-2.0.txt  2-PyMesh-License-MPL.txt  3-MSMS-License.txt  4-APBS-License.txt  6-3DUnet-License-MIT.txt
config/: core_dataprep_template.yaml  core_genpse_template.yaml  core_prediction_template.yaml  lazy_dataprep.yaml  lazy_inference.yaml  lazy_prediction.yaml  test_template.yaml  train_template.yaml
dataset/ref/: pocket_aux.txt
docs/source/: Resources.md  citation.rst  conf.py  development.rst  getstarted.rst  index.rst  qa.rst  thirdparty.md
docs/source/cheatsheet/: Conda_cheatsheet.md  Poetry_cheatsheet.md  Sphinx_cheatsheet.md
docs/source/modules/: common_used_functions.rst  holo_descriptor.rst  holospace.rst  parallel.rst  trajectory_handler.rst
docs/source/notebooks/: 01_trajectory_handler.ipynb  02_analyze_PDB_from_RCSB.ipynb  03_holo_like_form_detect.ipynb
docs/source/notebooks/supplementary/: 01a_fragmentation.ipynb  02a_preprocess_PDBs.ipynb  fragbest_cheatsheet.md
tutorial/: 01_trajectory_handler.ipynb  02_analyze_PDB_from_RCSB.ipynb  03_holo_like_form_detect.ipynb
tutorial/supplementary/: 01a_fragmentation.ipynb  02a_preprocess_PDBs.ipynb  fragbest_cheatsheet.md
utils/: config.cfg.example  pytest.ini
utils/datasets/: PPSCM_Apo.py  PPSCM_OMB.py  PPSCM_check.py  PRCM_Apo.py  PRCM_OMB.py  PRCM_check.py  PR_to_PPS_Apo.py  feature_handler.py  general.py  traj_handler.py
utils/default_config/: global_vars.py
utils/parallel/: framework.py
utils/ppseg/: dataset.py  evaluation_metrics.py  fragment.py  inference.py  normalization.py  test.py  train.py  voxelization.py  workflow.py
utils/ppseg/analysis/: data.py  logger_process.py  test_results.py
utils/ppseg/holo_descriptor/: holo_descriptor.py  holo_space.py  pt_ratio.py
utils/ppseg/ignite/: data.py  losses.py  models.py  scheduler_opmizers.py  trainers.py  transforms.py  utils.py
utils/ppseg/myo/: default_config.py  ligand_fragments_example.json  pocket_aux_example1.txt  pocket_aux_example2.txt  pocket_aux_example3.txt
utils/ppseg/visualization/: cv.py  visualization.py
utils/pymol_scripts/: vis_pdb_ply.py
utils/tests/: test_holo_descriptor.py  test_masif.py  test_ppseg.py  test_pymesh.py  test_toolbox.py  test_traj_handler.py  test_voxelization.py
utils/tests/test_data/: 5N69_protein.ply  PPS_OMB_MD1_aligned_test.xtc  ligand_fragments.json
utils/tests/test_data/pred_json/: 5N69_protein.json  6YSY_protein.json  8QYP_protein.json  8QYQ_protein.json  8QYR_protein.json  8QYU_protein.json
